--- a/public/gumdrop/src/index.html
+++ b/public/gumdrop/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Belleza' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <app-root></app-root>
